# SignalInteractive

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/agents/: pqxdh-implementer.agent.md
src/: common.py  main.py  persistence.py  router.py
src/assets/: app_state.json  tooltips.json
src/components/: data_classes.py  module_menu.py  navigation.py  persistence.py  router.py  session_payload.py  startup_prompt.py  state.py
src/components/assets/: app_state.json
src/modules/: base_logic.py  base_module.py  base_step_visualization.py  base_steps.py  base_view.py  double_ratchet.py  double_ratchet_logic.py  double_ratchet_view.py  external.py  message_state.py  party_state.py  tooltip_helpers.py
src/modules/double_ratchet/: attacker_dashboard.py  external.py  key_history.py  logic.py  module.py  step_visualization.py  view.py
src/modules/key_exchange/: __init__.py  key_exchange_base_logic.py  key_exchange_base_module.py  key_exchange_base_steps.py  key_exchange_base_view.py  step_visualization_common.py
src/modules/key_exchange/pqxdh/: __init__.py  logic.py  module.py  step_visualization.py  view.py
src/modules/key_exchange/x3dh/: __init__.py  logic.py  module.py  step_visualization.py  (+1 more)
src/modules/messaging/: __init__.py  messaging_base_logic.py  messaging_base_module.py  messaging_base_step_visualization.py  messaging_base_steps.py  messaging_base_view.py
src/modules/x3dh/: logic.py  module.py  step_visualization.py  view.py
tests/: test_attacker_logic.py  test_dr_logic.py  test_pqxdh_logic.py  test_spqr_logic.py  test_x3dh_logic.py
(+21 files in other folders)
