[project]
name = "Signal Interactive"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Bence Both", email = "xbothb@stuba.sk" }
]
dependencies = [
    "flet>=0.80.5",
    "pycryptodome>=3.20.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.5",
    "flet-desktop>=0.80.5",
    "flet-web>=0.80.5",
]

[tool.flet.app]
path = "src"
